tests/fixtures/invalid/pow_bytes_bool_bytes.py
# Cannot call pow() with Bytes, Bool, Bytes
x = pow(b"hello", True, b"hello")
